<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:layout_gravity="bottom"
    android:padding="5dp">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/processing_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:indicatorColor="?attr/colorPrimary"
        app:trackColor="?attr/colorOutline" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_cancel_36dp"
            app:tint="?attr/colorOnSurfaceVariant"
            android:contentDescription="@string/exit_button"/>

        <ImageButton
            android:id="@+id/btnModeAuto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_auto_off_36dp"
            app:tint="?attr/colorOnSurfaceVariant"
            android:contentDescription="@string/auto_button"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnRecord"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_mic_48dp"
            app:tint="?attr/colorOnPrimary"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/record_button"/>

    </LinearLayout>


</LinearLayout>
